[metadata]
name = flask_midtrans
version = attr: flask_midtrans.__version__
description = flask_midtrans is a package for integrate midtrans to flask framework
long_description = file: README.md
author = Agung Yuliyanto
author_email = agung.96tm@gmail.com
url = https://github.com/agung96tm/flask_midtrans
licence = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Operating System :: OS Independent
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Flask>=1.1.0,<2.0.0
    midtransclient>=1.2.0,<1.3.0
packages = find:
